[gd_scene load_steps=6 format=2]

[ext_resource path="res://framework/resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://framework/ui/modules/menu_button/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://framework/resources/fonts/m3x6/pixel_32.tres" type="FontFile" id=3]
[ext_resource path="res://framework/ui/modules/image_value_slider/ImageValueSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://framework/ui/menus/options_menu/options_menu.gd" type="Script" id=6]

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color( 0.917647, 0.831373, 0.666667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
offset_right = 320.0
offset_bottom = 240.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.768627 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
offset_right = 320.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
offset_left = 114.0
offset_top = 66.0
offset_right = 206.0
offset_bottom = 174.0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_right = 92.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource( 3 )
text = "~ OPTIONS ~"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_left = 7.0
offset_top = 28.0
offset_right = 85.0
offset_bottom = 108.0
custom_minimum_size = Vector2( 58, 0 )
size_flags_horizontal = 4

[node name="SFXSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
offset_right = 78.0

[node name="Background" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider" index="0"]
offset_right = 78.0

[node name="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider" index="1"]
offset_right = 78.0

[node name="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/MarginContainer" index="0"]
offset_right = 76.0

[node name="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/MarginContainer/HBoxContainer" index="0"]
offset_right = 49.0
text = "SFX"

[node name="Slider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/MarginContainer/HBoxContainer" index="1"]
offset_left = 49.0
offset_right = 74.0

[node name="MusicSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
offset_top = 14.0
offset_right = 78.0
offset_bottom = 24.0

[node name="Background" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider" index="0"]
offset_right = 78.0

[node name="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider" index="1"]
offset_right = 78.0

[node name="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/MarginContainer" index="0"]
offset_right = 76.0

[node name="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/MarginContainer/HBoxContainer" index="0"]
offset_right = 49.0
text = "MUSIC"

[node name="Slider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/MarginContainer/HBoxContainer" index="1"]
offset_left = 49.0
offset_right = 74.0

[node name="FullscreenButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 14.0
offset_right = 78.0
offset_bottom = 24.0
text = "FULLSCREEN"

[node name="ScreenShakeButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 28.0
offset_right = 78.0
offset_bottom = 38.0
text = "ENABLE SCREEN SHAKE"

[node name="MovingBackgroundButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 42.0
offset_right = 78.0
offset_bottom = 52.0
text = "ENABLE MOVING BG"

[node name="ResetDataButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 56.0
offset_right = 78.0
offset_bottom = 66.0
text = "RESET DATA"

[node name="BackButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 70.0
offset_right = 78.0
offset_bottom = 80.0
text = "BACK"

[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/PressedSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/PressedSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/HoverSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/SFXSlider/HoverSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/PressedSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/PressedSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/HoverSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/MusicSlider/HoverSound/RandomAudioPlayer"]
